--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,17 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
-    <script src="/js/angularApp.js"></script>
+    <script src="/js/app/app.js"></script>
+    <script src="/js/app/auth/auth-module.js"></script>
+    <script src="/js/app/auth/auth-service.js"></script>
+    <script src="/js/app/auth/auth-ctrl.js"></script>
+    <script src="/js/app/posts/posts-module.js"></script>
+    <script src="/js/app/posts/posts-service.js"></script>
+    <script src="/js/app/posts/main-ctrl.js"></script>
+    <script src="/js/app/posts/posts-ctrl.js"></script>
+    <script src="/js/app/shared/router.js"></script>
+    <script src="/js/app/shared/shared-module.js"></script>
+    <script src="/js/app/shared/nav-ctrl.js"></script>
     <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
   <body ng-app="flapperNews">
